--- a/Vux/vux/package.json
+++ b/Vux/vux/package.json
@@ -14,12 +14,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vux": "^2.2.0",
     "fastclick": "^1.0.6",
-    "vuex-i18n": "^1.3.1",
-    "vuex": "^2.1.1",
+    "postcss-aspect-ratio-mini": "^0.0.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-px-to-viewport": "^0.0.3",
+    "postcss-viewport-units": "^0.1.4",
+    "postcss-write-svg": "^3.0.1",
+    "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue": "^2.5.2"
+    "vuex": "^2.1.1",
+    "vuex-i18n": "^1.3.1",
+    "vux": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
